[metadata]
name = dsdb
version = 0.1.0
author = Giacomo Barone
author-email = giacomo@buildnn.com
license = "Copyright © 2018-2020 Giacomo Barone. All Rights Reserved."
long_description = "DsDb and DsDbConnect classes for easy dsdb handling."
requires-python = >=3.6
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python

[options]
packages =
    dsdb
